# MarketLens

./: .env.example  Makefile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/api/: main.py
app/api/routers/: domains.py
app/core/: db.py  domain_pack.py  models.py
app/core/constitution/: checks.py
app/jobs/: audit.py  crawl.py  extract.py  knowledge.py  run_pipeline.py  score.py
data/: aegisradar.db
domains/co2_us_market/: audit_rules.yaml  keywords.yaml  scoring.yaml  website_sources.yaml
domains/co2_us_market/fixtures/websites/: pages.json
marketlens.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: demo_live.ps1  reset_demo.ps1  serve.ps1
tests/: test_pipeline.py
