[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MarketLens"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "rich>=13",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "core*"]
